<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        app:iconifiedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/find_restaurants"
        app:searchIcon="@drawable/search" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relRestaurantsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/trending_restaurants"
            android:textColor="@color/naviy"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/see_all"
            android:textSize="18dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRestaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relRestaurantsTitle"
        tools:listitem="@layout/restaurants_row" />

    <RelativeLayout
        android:id="@+id/relCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRestaurants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/category"
            android:textColor="@color/naviy"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/see_all"
            android:textSize="18dp" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relCategoryTitle">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:background="@drawable/category_bgg"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:text="@string/italin"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:background="@drawable/category_bg2"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:text="@string/italin"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:background="@drawable/category_bg3"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:text="@string/italin"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/relFriendsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnCategories">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/freinds"
            android:textColor="@color/naviy"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/see_all"
            android:textSize="18dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriends"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relFriendsTitle"
        tools:listitem="@layout/friends_row" />
</androidx.constraintlayout.widget.ConstraintLayout>